# e2e-mock-demo

./: README.md
e2e-mock-demo/: Makefile  README.md  pyproject.toml
e2e-mock-demo/docs/: mkdocs.yml
e2e-mock-demo/docs/docs/: index.md
e2e-mock-demo/e2e_mock_demo/: __init__.py  dataset.py  features.py  plots.py
e2e-mock-demo/e2e_mock_demo/modeling/: predict.py  train.py
